Inicio da atualizando da documentacao Spring fox para versao 3.0.0